feat: V3预发布